# pde_world_model

./: .gitignore  IMPLEMENTATION_TRACKER.md  README.md  agend.md  pyproject.toml  spec_benchmarks_and_baselines.md  spec_model_and_losses.md  spec_online_acquisition_and_rl.md  spec_ray_slurm_wandb_architecture.md  world_model_pde_publication_grade_plan.md
artifacts/launch_logs/: run_challenging_benchmark.sh  run_generative_benchmark.sh
configs/: config.yaml  generate_offline_data.yaml  train_autoencoder.yaml  train_baseline.yaml  train_dynamics.yaml
configs/data/: burgers_1d.yaml  kdv_1d.yaml  ks_1d.yaml
configs/logging/: wandb.yaml
configs/model/: autoencoder_1d.yaml  cnn_ar_1d.yaml  dynamics_1d.yaml  fno_1d.yaml  pod_mlp_1d.yaml  unet_ar_1d.yaml
configs/solver/: burgers_1d.yaml  kdv_1d.yaml  ks_1d.yaml
configs/train/: autoencoder_1d.yaml  baseline_1d.yaml  dynamics_1d.yaml
docs/architecture/: setup_uv.md
scripts/: bootstrap_uv.sh  generate_offline_data.py  launch_long_campaign.sh  run_long_campaign.py  run_sprint4_experiments.py  run_worldmodel_active_sampling.py  run_worldmodel_benchmark.py  run_worldmodel_challenging_benchmark.py  run_worldmodel_generative_benchmark.py  train_autoencoder.py  train_baseline.py  train_dynamics.py
src/pdewm/: __init__.py
tests/: test_generative.py
tests/integration/: test_autoencoder_overfit.py  test_dynamics_overfit.py
tests/unit/: test_acquisition_heuristic.py  test_autoencoder_1d.py  test_autoencoder_losses.py  test_baselines_1d.py  test_burgers_1d_solver.py  test_dynamics_1d.py  test_kdv_1d_solver.py  (+6 more)
(+37 files in other folders)
