[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pde-world-model"
version = "0.1.0"
description = "Publication-grade latent world model for PDE benchmarks."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "hydra-core>=1.3",
  "matplotlib>=3.9",
  "numpy>=2.1",
  "omegaconf>=2.3",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scipy>=1.14",
  "torch>=2.5",
  "tqdm>=4.66",
  "wandb>=0.19",
  "zarr>=2.18",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
